<resources>
    <string name="ERROR_AUTO_LOAD_LOW_LOAD_AMOUNT">Only one value can be changed at a time</string>
    <string name="ERROR_AUTO_LOAD_LOW_THRESHOLD_AMOUNT">Only one value can be changed at a time</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add_amount">Add ₹%1$s</string>
    <string name="add_card_success_header">Add Card Successful</string>
    <string name="add_card_suucess_msg">New Card added Successfully</string>
    <string name="add_money_option_disable">All payment options are disabled.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="app_name">Dream Ludo</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_sure_you_want_to_cancel_transaction">Are you sure you want to cancel the transaction?</string>
    <string name="assist">Assist</string>
    <string name="assist_logo">Paytm Logo</string>
    <string name="audio">Audio</string>
    <string name="authenticate_your_payumoney_account">Authenticate your PayUmoney Account</string>
    <string name="auto_load_deactivate">Are you sure, you want to disable auto-load?</string>
    <string name="auto_load_deactivate_fail">Sorry, Deactivation failed. Please try after some time</string>
    <string name="auto_load_delete_on_card_remove">We found an active auto load subscription for this card. Deletion of card will result in removal of auto load subscription. Please confirm to delete</string>
    <string name="auto_load_setup_failed">Auto load setup failed</string>
    <string name="auto_load_temp_disable">We have encountered a server error. Hence, Auto load settings are temporarily disabled</string>
    <string name="auto_load_temp_disble_header">Auto load temporarily disable</string>
    <string name="auto_load_update_failed">Auto load update failed</string>
    <string name="bank_sbi">SBI</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="btn_add_money">Add Money</string>
    <string name="btn_add_new_card">Add New Card</string>
    <string name="btn_back_to_wallet">Back to My Wallet</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_continue_shopping">Continue Shopping</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_ok">OK</string>
    <string name="btn_proceed">Proceed</string>
    <string name="btn_save">Save</string>
    <string name="btn_save_cahnges">Save Changes</string>
    <string name="card_content_descriptor">card</string>
    <string name="cb_ac_debited_twice">* Your account may be debited twice if you retry.</string>
    <string name="cb_approve_otp">Approve</string>
    <string name="cb_authenticate_with">Select an option for Faster Payment</string>
    <string name="cb_b_cancel">Cancel</string>
    <string name="cb_bank_logo">Bank LOGO</string>
    <string name="cb_bank_page_loading">Please wait. Bank page is loading..</string>
    <string name="cb_btn_action">btn_action</string>
    <string name="cb_btn_text">btn_text</string>
    <string name="cb_button">Button</string>
    <string name="cb_cancel">cancel</string>
    <string name="cb_cancel_transaction">Cancel Transaction</string>
    <string name="cb_card_not_registered_with_pin">Your card has not been registered for PIN yet. Do you want to continue with PIN?</string>
    <string name="cb_catchAll_success_msg">catchAllSuccessMsg</string>
    <string name="cb_check_visibility_cajs">checkVisibilityCatchAllJSCall</string>
    <string name="cb_checkbox">checkbox</string>
    <string name="cb_choose">choose</string>
    <string name="cb_confirm_transaction">Confirm Transaction</string>
    <string name="cb_debug_enabled">cb_debug_enabled</string>
    <string name="cb_detect_bank">detectBank</string>
    <string name="cb_detect_otp">detectOtp</string>
    <string name="cb_enter_caps_otp">Enter OTP</string>
    <string name="cb_enter_manually">Enter OTP Manually</string>
    <string name="cb_enter_otp">enterOTP</string>
    <string name="cb_enter_otp_c">Enter OTP</string>
    <string name="cb_enter_pin">enterPIN</string>
    <string name="cb_error">error</string>
    <string name="cb_error_title">ERROR_TITLE</string>
    <string name="cb_fill_otp">fillOTP</string>
    <string name="cb_find_new_otp">findNewOtp</string>
    <string name="cb_find_otp">findOtp</string>
    <string name="cb_hide">hide</string>
    <string name="cb_incorrect_OTP_2">incorrectOTP</string>
    <string name="cb_incorrect_otp_e">Incorrect OTP!</string>
    <string name="cb_incorrect_password">Incorrect Password</string>
    <string name="cb_incorrect_pin">incorrectPIN</string>
    <string name="cb_init">init</string>
    <string name="cb_invalid_vpa">Invalid VPA</string>
    <string name="cb_nb_image">net banking image</string>
    <string name="cb_no_internet">NO INTERNET CONNECTIVITY</string>
    <string name="cb_no_internet_error">Oops.. something bad happened</string>
    <string name="cb_otp">otp</string>
    <string name="cb_otp_received">OTP Received</string>
    <string name="cb_password">PASSWORD</string>
    <string name="cb_password_value">Password</string>
    <string name="cb_payu_icon">PayU icon</string>
    <string name="cb_payu_response">payu_response</string>
    <string name="cb_payu_review_order">Review Order</string>
    <string name="cb_pin">pin</string>
    <string name="cb_please_wait">Please Wait</string>
    <string name="cb_populate_user_id">populate_user_id</string>
    <string name="cb_powered_by">Powered by</string>
    <string name="cb_process_otp">process_otp</string>
    <string name="cb_process_request">Processing Your Request</string>
    <string name="cb_pwd_btn">pwd_btn</string>
    <string name="cb_receive_sms">Did you receive a SMS from your bank?</string>
    <string name="cb_regen_otp">regenerate_otp</string>
    <string name="cb_regenerate">regenerate</string>
    <string name="cb_regenerate_otp">Regenerate OTP</string>
    <string name="cb_regenerate_otp_text">It is taking long.You may…</string>
    <string name="cb_register">register</string>
    <string name="cb_register_for_pin">REGISTER FOR PIN</string>
    <string name="cb_register_option">registerOption</string>
    <string name="cb_registeration_detail">Enter your registration details</string>
    <string name="cb_remember_user">Remember User ID</string>
    <string name="cb_result">result</string>
    <string name="cb_resuming_transaction">Resuming transaction please wait</string>
    <string name="cb_retry">retry…</string>
    <string name="cb_retry_otp">retryOTP</string>
    <string name="cb_retry_restart">Or you can retry now to restart your transaction.</string>
    <string name="cb_retry_transaction">Retry Now</string>
    <string name="cb_review_order">Review Order</string>
    <string name="cb_show_password">Show password</string>
    <string name="cb_skip_screen">skipScreen</string>
    <string name="cb_slow_internet_confirmation">Due to slower internet on your mobile device, we were unable to receive a confirmation from the bank.</string>
    <string name="cb_slownetwork_status">You are on a slow network that may have caused this transaction to fail. We will notify you when your network is ready to process the transaction.</string>
    <string name="cb_sms_otp">SMS OTP</string>
    <string name="cb_snooze">Snooze</string>
    <string name="cb_snooze_cookie">Cookie</string>
    <string name="cb_snooze_network_down_message">"We were not able to detect a better network to resume the transaction.
You may retry in a few minutes."</string>
    <string name="cb_snooze_network_error">Network Error</string>
    <string name="cb_snooze_payuid">PAYUID</string>
    <string name="cb_snooze_phpsessid">PHPSESSID</string>
    <string name="cb_snooze_retry_anyway">RETRY ANYWAY</string>
    <string name="cb_snooze_slow_user_warning">Your session is about to expire. Please complete the transaction quickly to avoid failure.</string>
    <string name="cb_snooze_slow_user_warning_header">Finish Transaction</string>
    <string name="cb_snooze_try_later">TRY LATER</string>
    <string name="cb_snooze_verify_api_status">api_status</string>
    <string name="cb_toggle_field">toggleField</string>
    <string name="cb_top_arrow">CB arrow</string>
    <string name="cb_verify">Verify</string>
    <string name="dafault_cvv">XXX</string>
    <string name="default_bank_name">BANK NAME</string>
    <string name="default_card_expiry">XXXXX</string>
    <string name="default_card_number">XXXXXXXXXXXXXXX</string>
    <string name="email_phone_no">Email / Mobile Phone No.</string>
    <string name="emi_screen_emi">EMI</string>
    <string name="emi_screen_interest">Interest</string>
    <string name="emi_screen_tenure">Tenure</string>
    <string name="enter_the_otp_password">Enter the OTP/Password</string>
    <string name="hint_vpa">Enter your VPA</string>
    <string name="label_add_card">Add Card</string>
    <string name="label_auto_load_set_done">Auto load set</string>
    <string name="label_auto_load_success_desc">"An auto-load of ₹%s has been set 
on your account."</string>
    <string name="label_autoload">Auto Load</string>
    <string name="login">LOGIN</string>
    <string name="otp_is_send_to_mobile_number">OTP is send to phone number</string>
    <string name="otp_password">Password / OTP</string>
    <string name="payumoney_image">Payumoney Image</string>
    <string name="proceed_to_pay">Proceed to Pay</string>
    <string name="quick_pay_amount">Pay ₹%1$s</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="slogan">The best way to pay online</string>
    <string name="upi_chooser_title">Choose UPI app</string>
    <string name="verified_by_visa_image">Verified by visa</string>
    <string name="vpa_title">Enter your VPA (UPI Address)</string>
</resources>