<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="fill" android:orientation="vertical" android:id="@id/plastic" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.material.appbar.AppBarLayout android:id="@id/header" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar android:id="@id/toolbar" android:background="?colorPrimary" android:layout_width="fill_parent" android:layout_height="?actionBarSize" />
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/logo" android:paddingTop="20.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/header" android:layout_centerHorizontal="true">
        <ImageView android:id="@id/imageView2" android:paddingTop="20.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/logo_color" android:contentDescription="@string/payumoney_image" android:scaleX="2.0" android:scaleY="2.0" />
        <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="18.0sp" android:textColor="#ff000000" android:paddingTop="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/slogan" />
    </LinearLayout>
    <RelativeLayout android:orientation="vertical" android:id="@id/login_options" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/logo">
        <ImageView android:id="@id/verifying_logo" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.0sp" android:src="@drawable/security_icons" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:contentDescription="@string/verified_by_visa_image" />
        <Button android:textColor="#ffffffff" android:id="@id/login" android:background="@drawable/button1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/twelve" android:text="@string/login" android:layout_above="@id/verifying_logo" />
        <LinearLayout android:gravity="" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="12.0sp">
            <AutoCompleteTextView android:theme="@style/EditTextLineColor" android:id="@id/email" android:background="@drawable/payumoney_edit_bg" android:paddingLeft="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/twelve" android:hint="@string/email_phone_no" android:ems="10" android:drawableLeft="@drawable/message_icon" android:inputType="textEmailAddress" />
            <EditText android:theme="@style/EditTextLineColor" android:gravity="center|left" android:id="@id/password" android:background="@drawable/payumoney_edit_bg" android:paddingLeft="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/twelve" android:hint="@string/otp_password" android:ems="10" android:drawableLeft="@drawable/password" android:inputType="textPassword" />
            <TextView android:textColor="@color/primary_green" android:gravity="center_horizontal" android:id="@id/opt_message" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/twelve" android:text="@string/otp_is_send_to_mobile_number" />
            <TextView android:textColor="@color/primary_green" android:gravity="center_horizontal" android:id="@id/text_view_resend_otp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/resend_otp" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
