<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/payumoney_white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:pptextview="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/verifying_logo" android:paddingBottom="@dimen/dimen_10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:src="@drawable/security_icons" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:contentDescription="@string/verified_by_visa_image" />
    <com.payumoney.sdkui.ui.widgets.CustomDrawableTextView android:textSize="@dimen/dimen_17sp" android:textColor="@color/payumoney_white" android:gravity="center" android:id="@id/btn_pay_now_otp_screen" android:paddingTop="@dimen/dimen_10dp" android:paddingBottom="@dimen/dimen_10dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_20dp" android:layout_marginTop="@dimen/dimen_30dp" android:layout_marginRight="@dimen/dimen_20dp" android:layout_marginBottom="@dimen/dimen_10dp" android:text="@string/quick_pay_amount" android:layout_above="@id/verifying_logo" pptextview:bgColor="?colorPrimary" pptextview:borderOnly="false" />
    <ScrollView android:orientation="vertical" android:paddingTop="@dimen/dimen_10dp" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/btn_pay_now_otp_screen">
        <RelativeLayout android:background="@color/payumoney_white" android:paddingLeft="@dimen/dimen_10dp" android:paddingRight="@dimen/dimen_10dp" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <include android:id="@id/amount_layout" android:visibility="visible" layout="@layout/amount_layout" />
            <TextView android:textSize="@dimen/dimen_16sp" android:textStyle="bold" android:gravity="center" android:id="@id/textview_authenticate_your_account" android:paddingTop="@dimen/dimen_5dp" android:paddingBottom="@dimen/dimen_5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_10dp" android:layout_marginTop="@dimen/dimen_30dp" android:layout_marginRight="@dimen/dimen_10dp" android:layout_marginBottom="@dimen/dimen_30dp" android:text="@string/authenticate_your_payumoney_account" android:layout_below="@id/amount_layout" android:layout_centerHorizontal="true" />
            <EditText android:theme="@style/EditTextLineColor" android:gravity="center" android:id="@id/edittext_password" android:background="@drawable/payumoney_edit_bg" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_10dp" android:layout_marginRight="@dimen/dimen_10dp" android:layout_marginBottom="@dimen/twelve" android:hint="@string/enter_the_otp_password" android:ems="10" android:layout_below="@id/textview_authenticate_your_account" android:inputType="textPassword" />
            <TextView android:textColor="@color/primary_green" android:gravity="center_horizontal" android:id="@id/otp_message" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_10dp" android:layout_marginRight="@dimen/dimen_10dp" android:layout_marginBottom="@dimen/twelve" android:text="@string/otp_is_send_to_mobile_number" android:layout_below="@id/edittext_password" />
            <TextView android:textColor="@color/primary_green" android:gravity="center_horizontal" android:id="@id/text_view_resend_otp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/resend_otp" android:layout_below="@id/otp_message" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
