<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:id="@id/add_new_card_itemView" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:layout_marginBottom="@dimen/dimen_10dp" android:layout_centerHorizontal="true" pptextview:cardBackgroundColor="@color/card_bg_color" pptextview:cardCornerRadius="@dimen/dimen_10dp" pptextview:cardElevation="0.0dip" pptextview:cardPreventCornerOverlap="false" pptextview:cardUseCompatPadding="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:pptextview="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:layout_width="250.0dip" android:layout_height="wrap_content">
        <RelativeLayout android:padding="@dimen/dimen_20dp" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true">
            <TextView android:textSize="@dimen/dimen_18sp" android:gravity="center" android:id="@id/dummy_card_bank_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/default_bank_name" android:drawableLeft="@drawable/ic_wallet_small" android:drawablePadding="@dimen/dimen_10dp" android:drawableStart="@drawable/ic_wallet_small" />
            <TextView android:textSize="@dimen/dimen_18sp" android:id="@id/dummy_card_cardNumber" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_20dp" android:text="@string/default_card_number" android:layout_below="@id/dummy_card_bank_name" android:layout_alignLeft="@id/dummy_card_bank_name" android:layout_alignStart="@id/dummy_card_bank_name" />
            <TextView android:textSize="@dimen/dimen_18sp" android:id="@id/dummy_card_cardExpiry" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/default_card_expiry" android:layout_below="@id/dummy_card_cardNumber" android:layout_alignLeft="@id/dummy_card_bank_name" android:layout_alignStart="@id/dummy_card_bank_name" />
            <TextView android:textSize="@dimen/dimen_18sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_30dp" android:text="@string/dafault_cvv" android:layout_toRightOf="@id/dummy_card_cardExpiry" android:layout_alignBottom="@id/dummy_card_cardExpiry" android:layout_marginStart="@dimen/dimen_30dp" android:layout_toEndOf="@id/dummy_card_cardExpiry" />
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/dimen_5dp" android:layout_below="@id/dummy_card_cardExpiry" android:layout_alignBottom="@id/dummy_autoLoadSwitch_card_layout" android:layout_alignParentRight="true" android:layout_marginEnd="@dimen/dimen_5dp" android:layout_alignParentEnd="true" />
            <LinearLayout android:id="@id/dummy_autoLoadSwitch_card_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:layout_below="@id/dummy_card_cardExpiry">
                <androidx.appcompat.widget.SwitchCompat android:id="@id/autoLoadSwitch_cardView" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_5dp" android:text="@string/label_autoload" android:layout_marginStart="@dimen/dimen_5dp" />
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true">
            <com.payumoney.sdkui.ui.widgets.CustomDrawableTextView android:textSize="@dimen/dimen_20sp" android:textColor="?colorPrimary" android:id="@id/add_new_card" android:paddingLeft="@dimen/dimen_25dp" android:paddingTop="@dimen/dimen_15dp" android:paddingRight="@dimen/dimen_25dp" android:paddingBottom="@dimen/dimen_15dp" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/label_add_card" pptextview:bgColor="?colorPrimary" pptextview:borderOnly="true" />
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
