<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:padding="@dimen/dimen_15dp" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:pptextview="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/dimen_20sp" android:textColor="@color/payumoney_black" android:gravity="center" android:id="@id/single_btn_dialog_header" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_10dp" android:layout_marginTop="@dimen/dimen_20dp" android:layout_marginRight="@dimen/dimen_10dp" android:text="@string/label_auto_load_set_done" />
    <TextView android:textSize="@dimen/dimen_16sp" android:textColor="@color/payumoney_black" android:gravity="center" android:id="@id/single_btn_dialog_message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_10dp" android:layout_marginTop="@dimen/dimen_20dp" android:layout_marginRight="@dimen/dimen_10dp" android:text="@string/label_auto_load_success_desc" />
    <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_25dp" android:layout_marginBottom="@dimen/dimen_15dp">
        <com.payumoney.sdkui.ui.widgets.CustomDrawableTextView android:textSize="@dimen/dimen_18sp" android:textColor="@android:color/white" android:gravity="center" android:id="@id/single_btn_dialog_btn" android:paddingLeft="@dimen/dimen_35dp" android:paddingTop="@dimen/dimen_10dp" android:paddingRight="@dimen/dimen_35dp" android:paddingBottom="@dimen/dimen_10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_ok" pptextview:bgColor="?colorPrimary" pptextview:borderOnly="false" />
    </LinearLayout>
</LinearLayout>
