<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:id="@id/lltop" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:id="@id/ll_app_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
            <TextView android:textSize="18.0sp" android:textColor="@color/cb_heading_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/upi_chooser_title" />
            <androidx.recyclerview.widget.RecyclerView android:scrollbarSize="10.0dip" android:scrollbarThumbVertical="@android:color/darker_gray" android:layout_gravity="center" android:id="@id/rvApps" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="150.0dip" android:layout_marginLeft="@dimen/cb_eight" android:layout_marginTop="@dimen/cb_twelve" android:fadeScrollbars="false" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/ll_separator" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
            <View android:layout_gravity="center" android:background="@color/cb_divider_color" android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_weight="1.0" />
            <TextView android:textSize="12.0sp" android:textColor="@color/cb_or_color" android:gravity="center" android:paddingLeft="6.0dip" android:paddingRight="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Or" />
            <View android:layout_gravity="center" android:background="@color/cb_divider_color" android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/ll_vpa" android:paddingLeft="35.0dip" android:paddingRight="35.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <TextView android:textSize="16.0sp" android:textColor="@color/cb_heading_color" android:id="@id/tvHeading" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/vpa_title" />
            <RelativeLayout android:id="@id/rlInputVpa" android:background="@drawable/cb_rectangle_round" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="16.0sp" android:textColor="@color/cb_verify_color" android:id="@id/tvVerifyVpa" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cb_verify" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                <EditText android:textColor="@color/cb_border_color" android:textColorHint="@color/cb_textColor" android:id="@id/edit_vpa" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_vpa" android:maxLines="1" android:layout_toLeftOf="@id/tvVerifyVpa" android:inputType="text" />
                <com.payu.upisdk.custombar.CircularProgressViewUpiSdk android:id="@id/upi_progressBar" android:paddingRight="4.0dip" android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_alignParentRight="true" android:layout_alignParentEnd="true" app:cpv_thickness="2.0dip" />
                <ImageView android:id="@id/ivVpaSuccess" android:visibility="gone" android:layout_width="12.0dip" android:layout_height="12.0dip" android:src="@drawable/cb_ic_vpa_verified" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:layout_alignParentEnd="true" />
            </RelativeLayout>
            <TextView android:textSize="14.0sp" android:id="@id/tvVpaName" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/llPayment" android:background="@drawable/cb_background_round_drawable" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="35.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="35.0dip" android:layout_marginBottom="8.0dip">
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ffdddddd" android:gravity="center" android:id="@id/tv_vpa_submit" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/proceed_to_pay" android:textAllCaps="true" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
